--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
                   class="malinglist-input"
                 />
                 <button class="malinglist-pic">
-                  <img src="/img/footer/footer__main/02.png" alt="" />
+                  <img src="./img/footer/footer__main/02.png" alt="" />
                 </button>
               </label>
             </div>
@@ -391,6 +391,6 @@
       </div>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
-    <script src="/script.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
