--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style/main.css" />
+    <link rel="stylesheet" href="./style/main1.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
@@ -35,7 +35,7 @@
       </div>
       <div class="header__container _container">
         <div class="header__logo">
-          <img src="/img/header/01.png" alt="logo" class="logo__header" />
+          <img src="./img/header/01.png" alt="logo" class="logo__header" />
         </div>
         <nav class="header__nav">
           <ul class="header-nav__list">
@@ -85,7 +85,7 @@
           <div class="representation__different-fon">
             <div class="representation__image">
               <img
-                src="/img/representation/01.png"
+                src="./img/representation/01.png"
                 alt="building"
                 class="representation__img"
               />
@@ -106,7 +106,7 @@
             <div class="practice__item">
               <div class="practice__item-img">
                 <img
-                  src="/img/practice/01.svg"
+                  src="./img/practice/01.svg"
                   alt="www"
                   class="practice__item-logo"
                 />
@@ -124,7 +124,7 @@
             <div class="practice__item">
               <div class="practice__item-img">
                 <img
-                  src="/img/practice/02.svg"
+                  src="./img/practice/02.svg"
                   alt="www"
                   class="practice__item-logo _mod"
                 />
@@ -141,7 +141,7 @@
             <div class="practice__item">
               <div class="practice__item-img">
                 <img
-                  src="/img/practice/03.svg"
+                  src="./img/practice/03.svg"
                   alt="www"
                   class="practice__item-logo"
                 />
@@ -162,7 +162,7 @@
         <div class="services__container _container">
           <div class="services__card" id="services">
             <img
-              src="/img/services/01.jpg"
+              src="./img/services/01.jpg"
               alt="mans_ass"
               class="services__img"
             />
@@ -213,9 +213,7 @@
           /></a>
         </div>
         <div class="swiper-button-prev review__prev-button">
-          <a href="" class="next-but_review">
-            <img src="/img/review/02.png" alt="big arrow" class="" />
-          </a>
+          <img src="/img/review/02.png" alt="big arrow" class="" />
         </div>
         <div class="swiper-pagination"></div>
       </section>
@@ -228,7 +226,7 @@
             <div class="article__item">
               <div class="article__item-img">
                 <img
-                  src="/img/articles/01.png"
+                  src="./img/articles/01.png"
                   alt="interier"
                   class="image__article"
                 />
@@ -246,7 +244,7 @@
             <div class="article__item">
               <div class="article__item-img">
                 <img
-                  src="/img/articles/02.png"
+                  src="./img/articles/02.png"
                   alt="interier"
                   class="image__article"
                 />
@@ -264,7 +262,7 @@
             <div class="article__item">
               <div class="article__item-img">
                 <img
-                  src="/img/articles/03.png"
+                  src="./img/articles/03.png"
                   alt="interier"
                   class="image__article"
                 />
@@ -302,7 +300,7 @@
           <div class="footer__about">
             <div class="footer__logo">
               <img
-                src="/img/footer/footer__main/01.png"
+                src="./img/footer/footer__main/01.png"
                 alt="logo"
                 class="logo__footer"
               />
@@ -321,7 +319,7 @@
                     target="_blank"
                     class="footer__button-ico"
                     ><img
-                      src="/img/footer/footer__ico/01.png"
+                      src="./img/footer/footer__ico/01.png"
                       alt="facebook"
                       class="button-ico_img"
                     />Facebook</a
@@ -335,7 +333,7 @@
                     target="_blank"
                     class="footer__button-ico"
                     ><img
-                      src="/img/footer/footer__ico/02.png"
+                      src="./img/footer/footer__ico/02.png"
                       alt="LinkedIn"
                       class="button-ico_img"
                     />LinkedIn</a
@@ -349,7 +347,7 @@
                     target="_blank"
                     class="footer__button-ico"
                     ><img
-                      src="/img/footer/footer__ico/03.png"
+                      src="./img/footer/footer__ico/03.png"
                       alt="Twitter"
                       class="button-ico_img"
                     />Twitter</a
@@ -391,6 +389,6 @@
       </div>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
-    <script src="./script.js"></script>
+    <script src="/script.js"></script>
   </body>
 </html>
