--- a/index.html
+++ b/index.html
@@ -209,11 +209,11 @@
         </div>
         <div class="swiper-button-next review__next-button">
           <a href="" class="prev-but_review">
-            <img src="/img/review/01.png" alt="arrow" class=""
+            <img src="./img/review/01.png" alt="arrow" class=""
           /></a>
         </div>
         <div class="swiper-button-prev review__prev-button">
-          <img src="/img/review/02.png" alt="big arrow" class="" />
+          <img src="./img/review/02.png" alt="big arrow" class="" />
         </div>
         <div class="swiper-pagination"></div>
       </section>
@@ -389,6 +389,6 @@
       </div>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
-    <script src="/script.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
